--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 	<title>@ViewData["Title"] - LocalVibes</title>
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/LocalVibes.styles.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/_Layout.css" asp-append-version="true" />
 </head>
 <body>
 	<div class="content-wrapper">
