--- a/LocalVibes/Views/Home/Landing.cshtml
+++ b/LocalVibes/Views/Home/Landing.cshtml
@@ -5,7 +5,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" /> 
     <link rel="stylesheet" href="~/css/Views/Landing/Landing.css" />
 </head>
