feat: Revieew card

--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -11,6 +11,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@ViewData["Title"]</title>
 	<link rel="stylesheet" href="~/css/Views/Shared/MemberCard.css"/>
+	<link rel="stylesheet" href="~/css/Views/Shared/ReviewCard.css"/>
+	<link rel="stylesheet" href="~/css/Views/Shared/Avatar.css"/>
 	<link rel="stylesheet" href="~/css/Views/Profile/Project.css" />
 	<link rel="stylesheet" href="~/css/Views/Shared/SocialMediaCard.css"/>
 </head>
@@ -60,6 +62,9 @@
                         UrlSocialMedia = "https://www.instagram.com"
                     }
                 })
+            </div>
+            <div>
+                @Html.Partial("_ReviewCard", new ReviewCardModel())
             </div>
         </div>
         <div class="Profile__right-section">
