--- a/LocalVibes/Views/Shared/_Avatar.cshtml
+++ b/LocalVibes/Views/Shared/_Avatar.cshtml
@@ -1,5 +1,5 @@
 @model LocalVibes.Models.AvatarModel
 
-<div class="Avatar" style="background-image: url('@Model.ImageUrl')">
+<div class="Avatar" style="background-image: url('@Model.ImageUrl'); width:@Model.Size; height:@Model.Size;">
 </div>
 
