--- a/LocalVibes/Views/Authentication/SignUpProject.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpProject.cshtml
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/css/Views/Authentication/Login.css" />
+	<link rel="stylesheet" href="~/css/multiSelect.css"/>
 </head>
 <body>
 	<!-- Titulo de la pagina -->
@@ -57,8 +58,8 @@
 			{
 				<div class="form-group">
 					<label asp-for="IdGenereMusical">Género</label>
-					<select asp-for="IdGenereMusical" class="form-control" asp-items="Model.SelectedGeneresMusic" multiple>
-						<option value="">Selecciona género</option>
+					<select asp-for="IdGenereMusical" class="form-control" asp-items="Model.SelectedGeneresMusic" data-placeholder="Selecciona género" multiple data-multi-select>
+						@* <option value="">Selecciona género</option> *@
 					</select>
 					<span asp-validation-for="IdGenereMusical" class="text-danger"></span>
 				</div>
@@ -85,5 +86,6 @@
 		</form>
 
 	</div>
+	<script src="~/js/MultiSelect.js"></script>
 </body>
 </html>
