--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -33,10 +33,12 @@
 							<ul class="navbar-nav">
 
 								<li class="nav-item">
-									<span class="nav-link text-dark">Bienvenido, @Context.Session.GetString("Username")</span>
+									<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="User">Bienvenido, @Context.Session.GetString("Username")</a>
+
 								</li>
 								<li>
-									<span class="nav-link text-dark">Projecto: @Context.Session.GetString("ProjectName")</span>
+									<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Project">Projecto: @Context.Session.GetString("ProjectName")</a>
+
 								</li>
 
 								<li class="nav-item">
@@ -48,7 +50,7 @@
 							<ul class="navbar-nav">
 
 								<li class="nav-item">
-									<span class="nav-link text-dark">Bienvenido, @Context.Session.GetString("Username")</span>
+									<a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="User">Bienvenido, @Context.Session.GetString("Username")</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="Logout">Cerrar sesion</a>
