--- a/LocalVibes/wwwroot/css/Views/SignUp/style.css
+++ b/LocalVibes/wwwroot/css/Views/SignUp/style.css
@@ -1,4 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+﻿/*@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -9,6 +9,7 @@
 
 body {
     background: #081b29;
+    max-height: 100vh;
 }
 
 .body {
@@ -178,7 +179,7 @@ input[type="date"]::-ms-clear {
 .input-box input:focus,
 .input-box input[data-filled="true"] {
     border-bottom-color: #9b59b6;
-}
+}*/
 
 .input-box label {
     position: absolute;
