feat: Profile User

--- a/LocalVibes/Views/Shared/_HorizontalCard.cshtml
+++ b/LocalVibes/Views/Shared/_HorizontalCard.cshtml
@@ -1,1 +1,12 @@
 @model LocalVibes.Models.CardModel
+
+<div class="HorizontalCard">
+    <div  style="background-image: url('@Model.ImageUrl'); background-size: cover; background-position: center; width: 200px; height: 200px; display: flex; justify-content: center; align-items: center;">
+    </div>
+    <div class="HorizontalCard__body" >
+        <div>
+            <h5 class="HorizontalCard__body__title" >@Model.Title</h5>
+            <p class="HorizontalCard__body__subtitle">@Model.Subtitle</p>
+        </div>
+    </div>
+</div>
